feat: add docsite publishable by gh action

--- a/docs/newcomputer.mdx
+++ b/docs/newcomputer.mdx
@@ -16,7 +16,7 @@ Sets up another machine, typically a debian computer such as a VPS or raspberry 
 $ make newcomputer
 ```
 
-## Example run 
+## Example run
 
 ```bash
 $  make newcomputer
@@ -88,4 +88,4 @@ This vars file is created in a directory named after the specified hostname. Thi
 
 # NEXT STEPS
 
-Now we can run the `make rootkeys` rule. You can read more about that [here](ROOTKEYS.md)
+Now we can run the `make rootkeys` rule. You can read more about that [here](/docs/rootkeys.md)
