--- a/docs/newsite.mdx
+++ b/docs/newsite.mdx
@@ -41,4 +41,4 @@ localhost                  : ok=4    changed=3    unreachable=0    failed=0    s
 
 # NEXT STEPS
 
-Now we can run the newly created role in `sites/Makefile. You can read more about that [here](sites/README.md)
+Now we can run the newly created role in `sites/Makefile. You can read more about that [here](/sites/README.md)
