--- a/docs/nginx.mdx
+++ b/docs/nginx.mdx
@@ -68,4 +68,4 @@ A 404 page is shown for your URL.
 
 # Next STEPS
 
-To prepare and cerify a site to go here, we need to run `make newsite`, and you can read more about that [here](NEWSITE.md)
+To prepare and cerify a site to go here, we need to run `make newsite`, and you can read more about that [here](/docs/newsite.md)
