--- a/docs/remote_login.mdx
+++ b/docs/remote_login.mdx
@@ -7,8 +7,8 @@
 
 ## Pre-requisites
 
-`make newcomputer` should have been run before this step. You can read about that [here](NEWCOMPUTER.md)
-`make rootkeys` should also have been run before this step to ensure it doesn't keep prompting for a password. You can read more about that [here](ROOTKEYS.md)
+`make newcomputer` should have been run before this step. You can read about that [here](/docs/newcomputer.md)
+`make rootkeys` should also have been run before this step to ensure it doesn't keep prompting for a password. You can read more about that [here](/docs/rootkeys.md)
 
 ## How To Use
 
@@ -62,4 +62,4 @@ rhyl.io37.ch               : ok=13   changed=6    unreachable=0    failed=0    s
 
 # NEXT STEPS
 
-Now we can run the `make userkeys` rule. You can read more about that [here](USERKEYS.md)
+Now we can run the `make userkeys` rule. You can read more about that [here](/docs/userkeys.md)
