--- a/docs/rootkeys.mdx
+++ b/docs/rootkeys.mdx
@@ -6,7 +6,7 @@
 
 ## Pre-requisites
 
-`make newcomputer` should have been run before this step. You can read about that [here](NEWCOMPUTER.md)
+`make newcomputer` should have been run before this step. You can read about that [here](/docs/newcomputer.md)
 
 ## How To Use
 
@@ -61,4 +61,4 @@ localhost                  : ok=3    changed=1    unreachable=0    failed=0    s
 
 # NEXT STEPS
 
-Now we can run the `make remote_login` rule. You can read more about that [here](REMOTE_LOGIN.md)
+Now we can run the `make remote_login` rule. You can read more about that [here](docs/remote_login.md)
