--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -41,10 +41,10 @@ This only executes on hosts in the macbook group in the inventory file (hosts), 
 
 Each of these roles can be run individually with their own make command, or collectively as `make debian`, where each role is executed sequentially. For more on each you can read here
 
-* [INSTALL.md](INSTALL.md)
-* [TERMINAL.md](TERMINAL.md)
-* [ALIASES.md](ALIASES.md)
-* [RAILS.md](RAILS.md)
-* [VSCODE.md](VSCODE.md)
-* [DESKTOP.md](DESKTOP.md)
-* [ELASTIC.md](ELASTIC.md)
+* [INSTALL.md](/docs/install.md)
+* [TERMINAL.md](/docs/terminal.md)
+* [ALIASES.md](/docs/aliases.md)
+* [RAILS.md](/docs/rails.md)
+* [VSCODE.md](/docs/vscode.md)
+* [DESKTOP.md](/docs/desktop.md)
+* [ELASTIC.md](/docs/elastic.md)
