--- a/docs/userkeys.mdx
+++ b/docs/userkeys.mdx
@@ -7,7 +7,7 @@
 
 ## Pre-requisites
 
-`make remote_login` should have been run before this step. You can read about that [here](REMOTE_LOGIN.md)
+`make remote_login` should have been run before this step. You can read about that [here](/docs/remote_login.md)
 
 ## How To Use
 
@@ -25,7 +25,7 @@ root:
   - { username: root@rhyl.io37.ch, userkey: ~/.ssh/id_rsa.pub }
 </pre>
 
-## Example run 
+## Example run
 
 ```bash
 make userkeys
@@ -81,4 +81,4 @@ rhyl.io37.ch               : ok=5    changed=3    unreachable=0    failed=0    s
 
 # NEXT STEPS
 
-Now we can run the `make debian` rule. You can read more about that [here](DEBIAN.md)
+Now we can run the `make debian` rule. You can read more about that [here](/docs/debian.md)
