--- a/docs/debian.mdx
+++ b/docs/debian.mdx
@@ -28,7 +28,7 @@ This only executes on hosts in the debian group in the inventory file (hosts). I
 
 Each of these roles can be run individually with their own make command, or collectively as `make debian`, where each role is executed sequentially. For more on each you can read here
 
-* [INSTALL.md](INSTALL.md)
-* [TERMINAL.md](TERMINAL.md)
-* [ALIASES.md](ALIASES.md)
-* [NGINX.md](NGINX.md)
+* [INSTALL.md](/docs/install.md)
+* [TERMINAL.md](/docs/terminal.md)
+* [ALIASES.md](/docs/aliases.md)
+* [NGINX.md](/docs/nginx.md)
